[gd_scene load_steps=3 format=2]

[ext_resource path="res://SpriteSheets/BabyTown2Weapons.png" type="Texture" id=1]
[ext_resource path="res://Weapons/RailGun.gd" type="Script" id=2]

[node name="RailGun" type="Node2D"]
show_behind_parent = true
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 17, 0 )
texture = ExtResource( 1 )
vframes = 5
hframes = 4
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( 18, -2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HoldingPoint" type="Position2D" parent="Sprite"]
position = Vector2( -7, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HoldingPoint2" type="Position2D" parent="Sprite"]
position = Vector2( 4, 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Reload" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
